--- a/pom.xml
+++ b/pom.xml
@@ -137,18 +137,30 @@
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
-			<version>1.12</version>
+			<version>1.13</version>
 		</dependency>
 		<!-- OrientDB -->
 		<dependency>
 			<groupId>com.orientechnologies</groupId>
 			<artifactId>orientdb-core</artifactId>
-			<version>1.5.0</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tinkerpop.blueprints</groupId>
 			<artifactId>blueprints-orient-graph</artifactId>
 			<version>2.4.0-SNAPSHOT</version>
+		</dependency>
+		<!-- Apache commons-compress wrapper -->
+		<dependency>
+			<groupId>org.rauschig</groupId>
+			<artifactId>jarchivelib</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+		<!-- Apache commons-io -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 		<!-- db4o -->
 		<dependency>
