--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<!-- Fix classpath: sudo mvn com.zenjava:javafx-maven-plugin:2.0:fix-classpath -->
+	<!-- Fix JRE classpath: sudo mvn com.zenjava:javafx-maven-plugin:2.0:fix-classpath -->
 	<groupId>de.algorythm.jdoe</groupId>
 	<artifactId>javaDbObjectEditor</artifactId>
 	<packaging>jar</packaging>
@@ -20,7 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<neo4j.version>1.9.1</neo4j.version>
 		<slf4j.version>1.6.1</slf4j.version>
-		<xtend.version>2.4.2</xtend.version>
+		<xtend.version>2.4.3</xtend.version>
 	</properties>
 
 	<build>
@@ -212,15 +212,5 @@
 			<id>sonatype-snapshots</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
 		</repository>
-		<repository>
-			<id>xtend</id>
-			<url>http://build.eclipse.org/common/xtend/maven/</url>
-		</repository>
 	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>xtend</id>
-			<url>http://build.eclipse.org/common/xtend/maven/</url>
-		</pluginRepository>
-	</pluginRepositories>
 </project>
