--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<neo4j.version>1.9.1</neo4j.version>
+		<neo4j.blueprints.version>2.4.0</neo4j.blueprints.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<xtend.version>2.4.3</xtend.version>
 	</properties>
@@ -111,13 +112,9 @@
 
 	<dependencies>
 		<!-- JavaFX -->
-		<!--<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>javafx</artifactId>
-			<version>2.2</version>
-			<scope>system</scope>
-			<systemPath>${env.JAVA_HOME}/jre/lib/jfxrt.jar</systemPath>
-		</dependency>-->
+		<!--<dependency> <groupId>com.oracle</groupId> <artifactId>javafx</artifactId> 
+			<version>2.2</version> <scope>system</scope> <systemPath>${env.JAVA_HOME}/jre/lib/jfxrt.jar</systemPath> 
+			</dependency> -->
 		<!-- Guice -->
 		<dependency>
 			<groupId>com.google.inject</groupId>
@@ -169,10 +166,23 @@
 			<version>8.1-SNAPSHOT</version>
 		</dependency>
 		<!-- Neo4j -->
-		<!-- <dependency> <groupId>org.neo4j</groupId> <artifactId>neo4j</artifactId> 
-			<version>${neo4j.version}</version> </dependency> <dependency> <groupId>org.neo4j</groupId> 
-			<artifactId>neo4j-kernel</artifactId> <version>${neo4j.version}</version> 
-			<type>test-jar</type> <scope>test</scope> </dependency> -->
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j</artifactId>
+			<version>${neo4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-kernel</artifactId>
+			<version>${neo4j.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.tinkerpop.blueprints</groupId>
+			<artifactId>blueprints-neo4j-graph</artifactId>
+			<version>${neo4j.blueprints.version}</version>
+		</dependency>
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
