--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<!-- Fix JRE classpath: sudo mvn com.zenjava:javafx-maven-plugin:2.0:fix-classpath -->
 	<groupId>de.algorythm.jddb</groupId>
 	<artifactId>javaDesktopDatabase</artifactId>
 	<packaging>jar</packaging>
@@ -18,10 +17,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<neo4j.version>1.9.1</neo4j.version>
-		<neo4j.blueprints.version>2.4.0</neo4j.blueprints.version>
-		<slf4j.version>1.6.1</slf4j.version>
-		<xtend.version>2.4.3</xtend.version>
+		<xtend.version>2.7.0</xtend.version>
 	</properties>
 
 	<build>
@@ -40,14 +36,14 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.zenjava</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
-				<version>2.0</version>
+				<version>8.1.2</version>
 				<configuration>
 					<mainClass>de.algorythm.jddb.JavaDesktopDatabase</mainClass>
 					<!-- only required if signing the jar file -->
@@ -94,27 +90,12 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
-				<version>2.1</version>
-			</plugin>
-			<!-- Exclude JavaFX dependency in eclipse -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<excludes>
-						<exclude>com.oracle:javafx</exclude>
-					</excludes>
-				</configuration>
+				<version>2.1.4</version>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-		<!-- JavaFX -->
-		<!--<dependency> <groupId>com.oracle</groupId> <artifactId>javafx</artifactId> 
-			<version>2.2</version> <scope>system</scope> <systemPath>${env.JAVA_HOME}/jre/lib/jfxrt.jar</systemPath> 
-			</dependency> -->
 		<!-- Guice -->
 		<dependency>
 			<groupId>com.google.inject</groupId>
@@ -127,31 +108,12 @@
 			<artifactId>org.eclipse.xtend.lib</artifactId>
 			<version>${xtend.version}</version>
 		</dependency>
-		<!-- Apache Commons IO -->
-		<!--<dependency> <groupId>org.apache.commons</groupId> <artifactId>commons-io</artifactId> 
-			<version>1.3.2</version> </dependency> -->
-		<!-- YAML (un)marshaller (for data model) -->
+		<!-- Logging -->
 		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.13</version>
-		</dependency>
-		<!-- OrientDB -->
-		<dependency>
-			<groupId>com.orientechnologies</groupId>
-			<artifactId>orientdb-core</artifactId>
-			<version>1.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tinkerpop.blueprints</groupId>
-			<artifactId>blueprints-orient-graph</artifactId>
-			<version>2.4.0-SNAPSHOT</version>
-		</dependency>
-		<!-- Apache commons-compress wrapper -->
-		<dependency>
-			<groupId>org.rauschig</groupId>
-			<artifactId>jarchivelib</artifactId>
-			<version>0.3.0</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>2.0.2</version>
+			<type>pom</type>
 		</dependency>
 		<!-- Apache commons-io -->
 		<dependency>
@@ -159,50 +121,31 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-		<!-- db4o -->
-		<dependency>
-			<groupId>com.db4o</groupId>
-			<artifactId>db4o-full-java5</artifactId>
-			<version>8.1-SNAPSHOT</version>
-		</dependency>
 		<!-- Neo4j -->
 		<dependency>
 			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j</artifactId>
-			<version>${neo4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-kernel</artifactId>
-			<version>${neo4j.version}</version>
+			<version>2.1.4</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.tinkerpop.blueprints</groupId>
-			<artifactId>blueprints-neo4j-graph</artifactId>
-			<version>${neo4j.blueprints.version}</version>
+			<artifactId>blueprints-neo4j2-graph</artifactId>
+			<version>2.5.0</version>
 		</dependency>
-		<!-- Logging -->
+		<!-- OrientDB -->
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${slf4j.version}</version>
+			<groupId>com.orientechnologies</groupId>
+			<artifactId>orientdb-core</artifactId>
+			<version>1.5.1</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>com.tinkerpop.blueprints</groupId>
+			<artifactId>blueprints-orient-graph</artifactId>
+			<version>2.4.0</version>
+			<scope>compile</scope>
 		</dependency>
 		<!-- JUnit -->
 		<dependency>
@@ -212,15 +155,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<repositories>
-		<repository>
-			<id>source.db4o</id>
-			<url>http://source.db4o.com/maven</url>
-		</repository>
-		<repository>
-			<id>sonatype-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-		</repository>
-	</repositories>
 </project>
